--- a/report/sections/experimental_setup.tex
+++ b/report/sections/experimental_setup.tex
@@ -1,80 +1,3 @@
-\documentclass[11pt,a4paper,onecolumn]{article}
-
-\usepackage[margin=1in]{geometry}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{times}
-\usepackage{setspace}
-\usepackage{url}
-\usepackage{graphicx}
-\usepackage{amsmath, amssymb, amsthm}
-\usepackage{booktabs, multirow, makecell, threeparttable}
-\usepackage{algorithm, algorithmic}
-\usepackage{float}
-\usepackage{caption, subcaption}
-\usepackage{xcolor}
-\usepackage{tikz}
-\usepackage{hyperref}
-\usepackage{listings}
-\usepackage{pdflscape}
-\usepackage{longtable}
-\usepackage{enumitem}
-\usepackage[scaled=0.9]{beramono}
-
-\usetikzlibrary{shapes.geometric, arrows.meta, positioning, calc, backgrounds, fit}
-
-\hypersetup{
-    colorlinks = true,
-    linkcolor = black,
-    urlcolor = blue,
-    citecolor = black
-}
-
-\lstset{
-  language=Python,
-  basicstyle=\ttfamily\footnotesize,
-  numbers=left,
-  numberstyle=\tiny\color{gray!70},
-  stepnumber=1,
-  numbersep=8pt,
-  frame=lines,
-  rulecolor=\color{black!40},
-  backgroundcolor=\color{white},
-  keywordstyle=\color{blue},
-  commentstyle=\color{green!50!black},
-  stringstyle=\color{red!70!black},
-  showstringspaces=false,
-  tabsize=2,
-  breaklines=true,
-  captionpos=b,
-  aboveskip=8pt,
-  belowskip=8pt
-}
-
-\title{\Large\bfseries
-Compression Techniques for Mistral-7B:\\
-A Comprehensive Evaluation of Efficiency and Performance
-}
-
-\author{
-  Zahraa Selim \quad
-  Menna Hamed \quad
-  Wesam Ahmed \quad
-  Sohyla Said \quad
-  Sara Basheer \\[1.5ex]
-  \normalsize\textit{Under the supervision of} \\[.5ex]
-  Prof. Rami Zewail \\[1.5ex]
-  \normalsize Department of Computer Science and Engineering,\\
-  Egypt-Japan University of Science and Technology (E-JUST)
-}
-
-\date{}
-\setlength{\parindent}{0pt}
-
-\begin{document}
-\maketitle
-\onehalfspacing
-
 \section{Experimental Setup}
 
 \subsection{Overview}
@@ -204,6 +127,42 @@ model = AutoHQQHFModel.from_pretrained(
 model.quantize_model(
     quant_config=quant_config,
     device='cuda'
+)
+\end{lstlisting}
+
+\item \textbf{AutoRound:} TBW
+    
+    \textbf{Parameters:}
+    \begin{itemize}
+        \item Bits = 4
+        \item Group Size = 128
+        \item Number of Samples = 64
+        \item Iterations = 50
+        \item Batch Size = 4
+        \item Sequence Length = 1024
+        \item Learning Rate = 5e-3
+    \end{itemize}
+    
+    \textbf{Implementation:}
+\begin{lstlisting}[language=Python, caption={HQQ Quantization (On-the-fly)}]
+ar = AutoRound(
+    model=MODEL_PATH,
+    scheme="W4A16",
+    bits=BITS,
+    group_size=GROUP_SIZE,
+    nsamples=NSAMPLES,
+    iters=ITERS,
+    lr=LR,
+    seqlen=SEQLEN,
+    batch_size=BATCH_SIZE,
+    low_gpu_mem_usage=True,
+    device_map="auto",
+    amp_dtype=torch.float16
+)
+
+ar.quantize_and_save(
+    output_dir=OUTPUT_DIR,
+    format="auto_round"
 )
 \end{lstlisting}
 
@@ -1023,180 +982,3 @@ save\_detailed\_responses & false & Save individual Q\&A responses \\
 
 All RAG metrics are averaged over the evaluation dataset sampled from a technical documentation corpus, with retrieval configured to return top-3 chunks per query by default.
 
-
-\newpage
-\section{Results}
-
-\subsection{Overview}
-We present a comprehensive comparison of compression techniques across three dimensions: efficiency gains, performance preservation, and RAG capabilities. Our analysis focuses on understanding the trade-offs between model size reduction, inference speed, and task performance for each compression method.
-
-\subsection{Compression Efficiency Analysis}
-
-\subsubsection{Quantization Methods}
-
-\begin{table}[H]
-\centering
-\caption{Performance comparison of quantization methods across benchmarks}
-\label{tab:quant_performance}
-\small
-\begin{tabular}{lccccccc}
-\hline
-\textbf{Method} & \textbf{Perplexity} & \textbf{HellaSwag} & \textbf{ARC-Easy} & \textbf{ARC-Challenge} & \textbf{GSM8K} & \textbf{MMLU} & \textbf{HumanEval} \\
- & \textit{(↓)} & \textit{(0-shot)} & \textit{(0-shot)} & \textit{(0-shot)} & \textit{(8-shot)} & \textit{(5-shot)} & \textit{(0-shot)} \\
-\hline
-FP16 & 12.79 & 0.72 & 0.76 & 0.58 & 0.36 & 1.00 & 0.05 \\
-NF4 & 13.02 & 0.70 & 0.75 & 0.58 & 0.27 & 0.55 & 0.05 \\
-GPTQ & 12.85 & 0.68 & 0.75 & 0.60 & --- & --- & 0.05 \\
-AWQ & 13.47 & --- & --- & --- & --- & --- & --- \\
-HQQ & 13.5 & 0.69 & 0.72 & 0.5 & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Average accuracy and performance degradation for quantization methods}
-\label{tab:quant_performance_summary}
-\small
-\begin{tabular}{lcccc}
-\hline
-\textbf{Method} & \textbf{Average} & \textbf{Perplexity} & \textbf{Accuracy} & \textbf{Tasks} \\
- & \textbf{Accuracy} & \textbf{Increase} & \textbf{Drop} & \textbf{Evaluated} \\
-\hline
-FP16 & 0.57 & --- & --- & 6 \\
-NF4 & 0.52 & +1.80\% & -0.05 & 6 \\
-GPTQ & 0.52 & +0.47\% & -0.05 & 6 \\
-AWQ & --- & +5.32\% & --- & 6 \\
-HQQ & --- & --- & --- & 6 \\
-\hline
-\end{tabular}
-\end{table}
-
-\newpage
-\subsection{Performance Preservation Analysis}
-
-\subsubsection{Quantization Methods}
-
-\begin{table}[H]
-\centering
-\caption{RAG answer quality evaluation of quantization methods}
-\label{tab:quant_rag}
-\small
-\begin{tabular}{lcccccccc}
-\hline
-\textbf{Method} & \textbf{F1} & \textbf{EM} & \textbf{Faithful-} & \textbf{Relevance} & \textbf{ROUGE-1} & \textbf{ROUGE-2} & \textbf{ROUGE-L} & \textbf{BERTScore} \\
- & & & \textbf{ness} & & & & & \textbf{F1} \\
-\hline
-FP16 & 0.217 & 0.0 & 0.559 & 0.094 & 0.279 & 0.092 & 0.197 & 0.658 \\
-NF4 & 0.205 & 0.0 & 0.539 & 0.083 & 0.244 & 0.086 & 0.177 & 0.614 \\
-GPTQ & --- & --- & --- & --- & --- & --- & --- & --- \\
-AWQ & 0.191 & 0.0 & 0.476 & 0.082 & 0.243 & 0.088 & 0.181 & 0.615 \\
-HQQ & --- & --- & --- & --- & --- & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{RAG vs no-RAG comparison for quantization methods}
-\label{tab:quant_rag_comparison}
-\small
-\begin{tabular}{lcccccc}
-\hline
-\textbf{Method} & \textbf{No-RAG} & \textbf{No-RAG} & \textbf{F1} & \textbf{EM} & \textbf{Avg Answer} & \textbf{Avg Answer} \\
- & \textbf{F1} & \textbf{EM} & \textbf{Improvement} & \textbf{Improvement} & \textbf{Length (RAG)} & \textbf{Length (No-RAG)} \\
-\hline
-FP16 & 0.190 & 0.0 & +0.027 & 0.0 & 33.75 & --- \\
-NF4 & 0.181 & 0.0 & +0.024 & 0.0 & 31.95 & --- \\
-GPTQ & --- & --- & --- & --- & --- & --- \\
-AWQ & 0.165 & 0.0 & +0.025 & 0.0 & 30.5 & --- \\
-HQQ & --- & --- & --- & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\newpage
-\subsection{RAG Performance Analysis}
-
-\subsubsection{Quantization Methods}
-
-\begin{table}[H]
-\centering
-\caption{RAG answer quality evaluation of quantization methods}
-\label{tab:quant_rag}
-\small
-\begin{tabular}{lcccccccc}
-\hline
-\textbf{Method} & \textbf{F1} & \textbf{EM} & \textbf{Faithful-} & \textbf{Relevance} & \textbf{ROUGE-1} & \textbf{ROUGE-2} & \textbf{ROUGE-L} & \textbf{BERTScore} \\
- & & & \textbf{ness} & & & & & \textbf{F1} \\
-\hline
-FP16 & 0.217 & 0.0 & 0.559 & 0.094 & 0.279 & 0.092 & 0.197 & 0.658 \\
-NF4 & 0.205 & 0.0 & 0.539 & 0.083 & 0.244 & 0.086 & 0.177 & 0.614 \\
-GPTQ & --- & --- & --- & --- & --- & --- & --- & --- \\
-AWQ & 0.191 & 0.0 & 0.476 & 0.082 & 0.243 & 0.088 & 0.181 & 0.615 \\
-HQQ & --- & --- & --- & --- & --- & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{RAG vs no-RAG comparison for quantization methods}
-\label{tab:quant_rag_comparison}
-\small
-\begin{tabular}{lcccccc}
-\hline
-\textbf{Method} & \textbf{No-RAG} & \textbf{No-RAG} & \textbf{F1} & \textbf{EM} & \textbf{Avg Answer} & \textbf{Avg Answer} \\
- & \textbf{F1} & \textbf{EM} & \textbf{Improvement} & \textbf{Improvement} & \textbf{Length (RAG)} & \textbf{Length (No-RAG)} \\
-\hline
-FP16 & 0.190 & 0.0 & +0.027 & 0.0 & 33.75 & --- \\
-NF4 & 0.181 & 0.0 & +0.024 & 0.0 & 31.95 & --- \\
-GPTQ & --- & --- & --- & --- & --- & --- \\
-AWQ & 0.165 & 0.0 & +0.025 & 0.0 & 30.5 & --- \\
-HQQ & --- & --- & --- & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Context retrieval quality across quantization methods}
-\label{tab:quant_retrieval}
-\small
-\begin{tabular}{lccccccc}
-\hline
-\textbf{Method} & \textbf{Sufficiency} & \textbf{Precision} & \textbf{Coverage} & \textbf{Consistency} & \textbf{Avg Score} & \textbf{Avg Chunks} & \textbf{Avg Context} \\
- & & & & \textbf{(std)} & & \textbf{Retrieved} & \textbf{Length} \\
-\hline
-FP16 & 0.796 & 0.564 & 0.756 & 0.090 & 0.800 & 3.0 & 1308.5 \\
-NF4 & 0.796 & 0.564 & 0.756 & 0.090 & 0.800 & 3.0 & 1308.5 \\
-GPTQ & --- & --- & --- & --- & --- & --- & --- \\
-AWQ & 0.796 & 0.564 & 0.756 & 0.090 & 0.800 & 3.0 & 1308.5 \\
-HQQ & --- & --- & --- & --- & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{RAG efficiency metrics for quantization methods}
-\label{tab:quant_rag_efficiency}
-\small
-\begin{tabular}{lcccccc}
-\hline
-\textbf{Method} & \textbf{Retrieval} & \textbf{RAG Gen} & \textbf{No-RAG Gen} & \textbf{RAG} & \textbf{No-RAG} & \textbf{Generation} \\
- & \textbf{Time (ms)} & \textbf{Time (ms)} & \textbf{Time (ms)} & \textbf{Throughput} & \textbf{Throughput} & \textbf{Speedup} \\
- & & & & \textbf{(tok/s)} & \textbf{(tok/s)} & \\
-\hline
-FP16 & 24.7 & 8435.5 & 7855.2 & 5.33 & 9.34 & 0.93x \\
-NF4 & 28.0 & 10443.9 & 9965.0 & 4.37 & 7.06 & 0.95x \\
-GPTQ & --- & --- & --- & --- & --- & --- \\
-AWQ & 26.1 & 9993.9 & 7744.2 & 4.36 & 7.94 & 0.77x \\
-HQQ & --- & --- & --- & --- & --- & --- \\
-\hline
-\end{tabular}
-\end{table}
-
-\end{document}
-
-\end{document}
